# mcp-collection

./: .dockerignore  .gitignore  Dockerfile  README.md  renovate.json5
.github/workflows/: build-and-publish.yaml
root/: docker-entrypoint.sh
root/app/: package-lock.json  package.json  pyproject.toml
