[project]
name = "mcp-collection"
version = "1.0.0"
description = "MCP collection with integrated supergateway"
requires-python = ">=3.13"
dependencies = [
    "mcp-server-calculator==0.1.2",
    "mcp-server-fetch==2025.4.7",
    "mcp-server-qdrant==0.7.1",
    "mcp-server-time==2025.9.25",
    "mcp-yahoo-finance==0.1.2",
    "mcpo==0.0.12",
]
